// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Language Tour — Polymorphism > forcing implicits 1`] = `
[
  {
    "codegenJS": "function main() {
  const env_cls2 = {};
  const fnref_cls2 = closure_10;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}

function closure_11(env0, x1) {
  return x1;
}

function closure_10(env0, a1) {
  const env_cls2 = {};
  const fnref_cls2 = closure_11;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}
return main();
",
    "elaborated": "λ(a: Type) => λ(x: a) -> x",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"id"}
[3] lambda {"variable":"a","icit":"Implicit","level":1}
  :annotation -> [4]
  :body -> [5]
  :env -> [8]
[4] lit {"value":{"type":"Atom","value":"Type"}}
[5] lambda {"variable":"x","icit":"Explicit","level":2}
  :annotation -> [6]
  :body -> [7]
  :env -> [9]
[6] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[7] var:bound {"index":0}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
[8] env
[9] env
[10] closure
  :body -> [3]
  :env -> [8]
[11] closure
  :body -> [5]
  :env -> [9]",
    "ivl": "(forall ((a Type)) (forall ((x Type)) (= x x)))",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let env_cls2 = alloc {  }
      let fnref_cls2 = &closure_10
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2
  fn closure_11(env0, x1) entry=entry
    entry:
      return x1
  fn closure_10(env0, a1) entry=entry
    entry:
      let env_cls2 = alloc {  }
      let fnref_cls2 = &closure_11
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2",
    "name": "id",
    "normalized": "λ(a: Type) => (closure: λ(x: a) -> x -| Γ: a)",
    "solverTrace": "=== Formula ===
  (forall ((a Type)) (forall ((x Type)) (= x x)))

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]

[quantifier] round 0: 0 lemmas
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[mbqi] round 0: 0 lemmas
  a=x -> residual
  x=x -> residual
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1",
    "type": "Π(a: Type) => Π(t1: a) -> a",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = id;
  const v1 = String;
  const fnref2 = v0.__fn;
  const env3 = v0.__env;
  const v4 = fnref2(env3, v1);
  const v5 = "hello";
  const fnref6 = v4.__fn;
  const env7 = v4.__env;
  const v8 = fnref6(env7, v5);
  return v8;
}
return main();
",
    "elaborated": "id @String "hello"",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"forcedStr"}
[3] app {"icit":"Explicit"}
  :arg -> [9]
  :func -> [4]
[4] app {"icit":"Implicit"}
  :arg -> [8]
  :func -> [6]
[5] var:free {"name":"id"}
[6] var:ref {"name":"id"}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
[7] var:free {"name":"String"}
[8] var:ref {"name":"String"}
  :refers_to -> [7]
  :scope -> [2] {"level":0}
[9] lit {"value":{"type":"String","value":"hello"}}",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = id
      let v1 = String
      let fnref2 = read v0.__fn
      let env3 = read v0.__env
      let v4 = call *fnref2(env3, v1)
      let v5 = "hello"
      let fnref6 = read v4.__fn
      let env7 = read v4.__env
      let v8 = call *fnref6(env7, v5)
      return v8",
    "name": "forcedStr",
    "normalized": ""hello"",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "String",
    "validity": "valid",
  },
]
`;

exports[`Language Tour — Polymorphism > implicit parameters 1`] = `
[
  {
    "codegenJS": "function main() {
  const env_cls2 = {};
  const fnref_cls2 = closure_10;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}

function closure_11(env0, x1) {
  return x1;
}

function closure_10(env0, a1) {
  const env_cls2 = {};
  const fnref_cls2 = closure_11;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}
return main();
",
    "elaborated": "λ(a: Type) => λ(x: a) -> x",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"id"}
[3] lambda {"variable":"a","icit":"Implicit","level":1}
  :annotation -> [4]
  :body -> [5]
  :env -> [8]
[4] lit {"value":{"type":"Atom","value":"Type"}}
[5] lambda {"variable":"x","icit":"Explicit","level":2}
  :annotation -> [6]
  :body -> [7]
  :env -> [9]
[6] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[7] var:bound {"index":0}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
[8] env
[9] env
[10] closure
  :body -> [3]
  :env -> [8]
[11] closure
  :body -> [5]
  :env -> [9]",
    "ivl": "(forall ((a Type)) (forall ((x Type)) (= x x)))",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let env_cls2 = alloc {  }
      let fnref_cls2 = &closure_10
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2
  fn closure_11(env0, x1) entry=entry
    entry:
      return x1
  fn closure_10(env0, a1) entry=entry
    entry:
      let env_cls2 = alloc {  }
      let fnref_cls2 = &closure_11
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2",
    "name": "id",
    "normalized": "λ(a: Type) => (closure: λ(x: a) -> x -| Γ: a)",
    "solverTrace": "=== Formula ===
  (forall ((a Type)) (forall ((x Type)) (= x x)))

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]

[quantifier] round 0: 0 lemmas
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[mbqi] round 0: 0 lemmas
  a=x -> residual
  x=x -> residual
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1",
    "type": "Π(a: Type) => Π(t1: a) -> a",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = id;
  const v1 = "Num";
  const fnref2 = v0.__fn;
  const env3 = v0.__env;
  const v4 = fnref2(env3, v1);
  const v5 = 42;
  const fnref6 = v4.__fn;
  const env7 = v4.__env;
  const v8 = fnref6(env7, v5);
  return v8;
}
return main();
",
    "elaborated": "id @Num 42",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"n2"}
[3] app {"icit":"Explicit"}
  :arg -> [8]
  :func -> [4]
[4] app {"icit":"Implicit"}
  :arg -> [7]
  :func -> [6]
[5] var:free {"name":"id"}
[6] var:ref {"name":"id"}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
[7] lit {"value":{"type":"Atom","value":"Num"}}
[8] lit {"value":{"type":"Num","value":42}}",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = id
      let v1 = Num
      let fnref2 = read v0.__fn
      let env3 = read v0.__env
      let v4 = call *fnref2(env3, v1)
      let v5 = 42
      let fnref6 = read v4.__fn
      let env7 = read v4.__env
      let v8 = call *fnref6(env7, v5)
      return v8",
    "name": "n2",
    "normalized": "42",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Num",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = id;
  const v1 = "String";
  const fnref2 = v0.__fn;
  const env3 = v0.__env;
  const v4 = fnref2(env3, v1);
  const v5 = "hello";
  const fnref6 = v4.__fn;
  const env7 = v4.__env;
  const v8 = fnref6(env7, v5);
  return v8;
}
return main();
",
    "elaborated": "id @String "hello"",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"s2"}
[3] app {"icit":"Explicit"}
  :arg -> [8]
  :func -> [4]
[4] app {"icit":"Implicit"}
  :arg -> [7]
  :func -> [6]
[5] var:free {"name":"id"}
[6] var:ref {"name":"id"}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
[7] lit {"value":{"type":"Atom","value":"String"}}
[8] lit {"value":{"type":"String","value":"hello"}}",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = id
      let v1 = String
      let fnref2 = read v0.__fn
      let env3 = read v0.__env
      let v4 = call *fnref2(env3, v1)
      let v5 = "hello"
      let fnref6 = read v4.__fn
      let env7 = read v4.__env
      let v8 = call *fnref6(env7, v5)
      return v8",
    "name": "s2",
    "normalized": ""hello"",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "String",
    "validity": "valid",
  },
]
`;

exports[`Language Tour — Polymorphism > implicit resolution with using 1`] = `
[
  {
    "codegenJS": "function main() {
  const env_cls2 = {};
  const fnref_cls2 = closure_16;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}

function closure_17(env0, x1) {
  const cap_0 = env0.v0;
  const v0 = (x1 + cap_0);
  return v0;
}

function closure_16(env0, n1) {
  const env_cls2 = {
    v0: n1
  };
  const fnref_cls2 = closure_17;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}
return main();
",
    "elaborated": "λ(n: Num) => λ(x: Num) -> FFI.$add x n",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"addImplicit"}
[3] lambda {"variable":"n","icit":"Implicit","level":1}
  :annotation -> [4]
  :body -> [5]
  :env -> [14]
[4] lit {"value":{"type":"Atom","value":"Num"}}
[5] lambda {"variable":"x","icit":"Explicit","level":2}
  :annotation -> [6]
  :body -> [13]
  :env -> [15]
[6] lit {"value":{"type":"Atom","value":"Num"}}
[9] var:foreign {"name":"$add","arity":2}
[11] var:bound {"index":0}
  :next -> [12]
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
[12] var:bound {"index":1}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
[13] primop {"op":"$add"}
  :arg -> [11] {"index":0}
  :arg -> [12] {"index":1}
  :callee -> [9]
[14] env
[15] env
  :capture -> [3] {"index":0}
[16] closure
  :body -> [3]
  :env -> [14]
[17] closure
  :body -> [5]
  :env -> [15]",
    "ivl": "(forall ((n Real)) (forall ((x Real)) (and (= x x) (= n n))))",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let env_cls2 = alloc {  }
      let fnref_cls2 = &closure_16
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2
  fn closure_17(env0, x1) entry=entry
    entry:
      let cap_0 = read env0.v0
      let v0 = +(x1, cap_0)
      return v0
  fn closure_16(env0, n1) entry=entry
    entry:
      let env_cls2 = alloc { v0: n1 }
      let fnref_cls2 = &closure_17
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2",
    "name": "addImplicit",
    "normalized": "λ(n: Num) => (closure: λ(x: Num) -> FFI.$add x n -| Γ: n)",
    "solverTrace": "=== Formula ===
  (forall ((n Real)) (forall ((x Real)) (and (= x x) (= n n))))

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]

[quantifier] round 0: 0 lemmas
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[mbqi] round 0: 0 lemmas
  n=x -> residual
  n=n -> residual
  x=x -> residual
  x=n -> residual
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1",
    "type": "Π(n: Num) => Π(t1: Num) -> Num",
    "validity": "valid",
  },
  {
    "kind": "using",
    "name": "(using)",
  },
  {
    "codegenJS": "function main() {
  const v0 = addImplicit;
  const v1 = 10;
  const fnref2 = v0.__fn;
  const env3 = v0.__env;
  const v4 = fnref2(env3, v1);
  const v5 = 1;
  const fnref6 = v4.__fn;
  const env7 = v4.__env;
  const v8 = fnref6(env7, v5);
  return v8;
}
return main();
",
    "elaborated": "addImplicit @10 1",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"eleven"}
[3] app {"icit":"Explicit"}
  :arg -> [8]
  :func -> [4]
[4] app {"icit":"Implicit"}
  :arg -> [7]
  :func -> [6]
[5] var:free {"name":"addImplicit"}
[6] var:ref {"name":"addImplicit"}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
[7] lit {"value":{"type":"Num","value":10}}
[8] lit {"value":{"type":"Num","value":1}}",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = addImplicit
      let v1 = 10
      let fnref2 = read v0.__fn
      let env3 = read v0.__env
      let v4 = call *fnref2(env3, v1)
      let v5 = 1
      let fnref6 = read v4.__fn
      let env7 = read v4.__env
      let v8 = call *fnref6(env7, v5)
      return v8",
    "name": "eleven",
    "normalized": "11",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Num",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = addImplicit;
  const v1 = 10;
  const fnref2 = v0.__fn;
  const env3 = v0.__env;
  const v4 = fnref2(env3, v1);
  const v5 = 5;
  const fnref6 = v4.__fn;
  const env7 = v4.__env;
  const v8 = fnref6(env7, v5);
  return v8;
}
return main();
",
    "elaborated": "addImplicit @10 5",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"fifteen"}
[3] app {"icit":"Explicit"}
  :arg -> [8]
  :func -> [4]
[4] app {"icit":"Implicit"}
  :arg -> [7]
  :func -> [6]
[5] var:free {"name":"addImplicit"}
[6] var:ref {"name":"addImplicit"}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
[7] lit {"value":{"type":"Num","value":10}}
[8] lit {"value":{"type":"Num","value":5}}",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = addImplicit
      let v1 = 10
      let fnref2 = read v0.__fn
      let env3 = read v0.__env
      let v4 = call *fnref2(env3, v1)
      let v5 = 5
      let fnref6 = read v4.__fn
      let env7 = read v4.__env
      let v8 = call *fnref6(env7, v5)
      return v8",
    "name": "fifteen",
    "normalized": "15",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Num",
    "validity": "valid",
  },
]
`;

exports[`Language Tour — Polymorphism > inference and generalization 1`] = `
[
  {
    "codegenJS": "function main() {
  const env_cls2 = {};
  const fnref_cls2 = closure_13;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}

function closure_13(env0, x1) {
  const v0 = 1;
  const v1 = (x1 + v0);
  return v1;
}
return main();
",
    "elaborated": "(λ(x: Num) -> FFI.$add x 1 : Π(x: Num) ->
  <ω> Num [| λ(r: Num) -> FFI.$eq r (FFI.$add x 1) |])",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"inc"}
[3] lambda {"variable":"x","icit":"Explicit","level":1}
  :annotation -> [4]
  :body -> [11]
  :env -> [12]
[4] lit {"value":{"type":"Atom","value":"Num"}}
[7] var:foreign {"name":"$add","arity":2}
[9] var:bound {"index":0}
  :next -> [10]
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[10] lit {"value":{"type":"Num","value":1}}
[11] primop {"op":"$add"}
  :arg -> [9] {"index":0}
  :arg -> [10] {"index":1}
  :callee -> [7]
[12] env
[13] closure
  :body -> [3]
  :env -> [12]",
    "ivl": "(and
  (forall ((x Real))
    (and
      (= x x)
      (forall ((x Real))
        (=>
          (= x x)
          (forall ((y Real))
            (=>
              (= y 1)
              (forall ((r Real)) (=> (= r (+ x 1)) (= r (+ x 1))))))))))
  (forall ((x Real)) (forall ((r Real)) (=> (= r (+ x 1)) (= r (+ x 1))))))",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let env_cls2 = alloc {  }
      let fnref_cls2 = &closure_13
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2
  fn closure_13(env0, x1) entry=entry
    entry:
      let v0 = 1
      let v1 = +(x1, v0)
      return v1",
    "name": "inc",
    "normalized": "λ(x: Num) -> (closure: FFI.$add x 1 -| Γ: x)",
    "solverTrace": "=== Formula ===
  (and
    (forall ((x Real))
      (and
        (= x x)
        (forall ((x Real))
          (=>
            (= x x)
            (forall ((y Real))
              (=>
                (= y 1)
                (forall ((r Real)) (=> (= r (+ x 1)) (= r (+ x 1))))))))))
    (forall ((x Real)) (forall ((r Real)) (=> (= r (+ x 1)) (= r (+ x 1))))))

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]

[quantifier] round 0: 0 lemmas
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[mbqi] round 0: 0 lemmas
  x=x -> residual
  x=1 -> residual
  y=x -> residual
  y=1 -> residual
  r=x -> residual
  r=1 -> residual
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1",
    "type": "Π(x: Num) -> <ω> Num [| λ(r: Num) -> FFI.$eq r (FFI.$add x 1) |]",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const env_cls2 = {};
  const fnref_cls2 = closure_16;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}

function closure_19(env0, y1) {
  const cap_0 = env0.v0;
  return cap_0;
}

function closure_18(env0, x1) {
  const cap_0 = env0.v0;
  const env_cls2 = {
    v0: x1
  };
  const fnref_cls2 = closure_19;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}

function closure_17(env0, b1) {
  const cap_0 = env0.v0;
  const env_cls2 = {
    v0: b1
  };
  const fnref_cls2 = closure_18;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}

function closure_16(env0, a1) {
  const env_cls2 = {
    v0: a1
  };
  const fnref_cls2 = closure_17;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}
return main();
",
    "elaborated": "λ(a: Type) =>
  λ(b: Type) =>
    (λ(x: a) -> (λ(y: b) -> x : Π(y: b) -> a) : Π(x: a) -> Π(y: b) -> a)",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"fst"}
[3] lambda {"variable":"a","icit":"Implicit","level":1}
  :annotation -> [4]
  :body -> [5]
  :env -> [12]
[4] lit {"value":{"type":"Atom","value":"Type"}}
[5] lambda {"variable":"b","icit":"Implicit","level":2}
  :annotation -> [6]
  :body -> [7]
  :env -> [13]
[6] lit {"value":{"type":"Atom","value":"Type"}}
[7] lambda {"variable":"x","icit":"Explicit","level":3}
  :annotation -> [8]
  :body -> [9]
  :env -> [14]
[8] var:bound {"index":1}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
[9] lambda {"variable":"y","icit":"Explicit","level":4}
  :annotation -> [10]
  :body -> [11]
  :env -> [15]
[10] var:bound {"index":1}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [7] {"level":3}
[11] var:bound {"index":1}
  :refers_to -> [7]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [7] {"level":3}
  :scope -> [9] {"level":4}
[12] env
[13] env
  :capture -> [3] {"index":0}
[14] env
  :capture -> [5] {"index":0}
[15] env
  :capture -> [7] {"index":0}
[16] closure
  :body -> [3]
  :env -> [12]
[17] closure
  :body -> [5]
  :env -> [13]
[18] closure
  :body -> [7]
  :env -> [14]
[19] closure
  :body -> [9]
  :env -> [15]",
    "ivl": "(forall ((a Type))
  (forall ((b Type)) (forall ((x Type)) (forall ((y Type)) (= x x)))))",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let env_cls2 = alloc {  }
      let fnref_cls2 = &closure_16
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2
  fn closure_19(env0, y1) entry=entry
    entry:
      let cap_0 = read env0.v0
      return cap_0
  fn closure_18(env0, x1) entry=entry
    entry:
      let cap_0 = read env0.v0
      let env_cls2 = alloc { v0: x1 }
      let fnref_cls2 = &closure_19
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2
  fn closure_17(env0, b1) entry=entry
    entry:
      let cap_0 = read env0.v0
      let env_cls2 = alloc { v0: b1 }
      let fnref_cls2 = &closure_18
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2
  fn closure_16(env0, a1) entry=entry
    entry:
      let env_cls2 = alloc { v0: a1 }
      let fnref_cls2 = &closure_17
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2",
    "name": "fst",
    "normalized": "λ(a: Type) =>
  (closure: λ(b: Type) =>
    (λ(x: a) -> (λ(y: b) -> x : Π(y: b) -> a) : Π(x: a) ->
      Π(y: b) -> a) -| Γ: a)",
    "solverTrace": "=== Formula ===
  (forall ((a Type))
    (forall ((b Type)) (forall ((x Type)) (forall ((y Type)) (= x x)))))

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]

[quantifier] round 0: 0 lemmas
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[mbqi] round 0: 0 lemmas
  a=x -> residual
  b=x -> residual
  x=x -> residual
  y=x -> residual
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1",
    "type": "Π(a: Type) => Π(b: Type) => Π(x: a) -> Π(y: b) -> a",
    "validity": "valid",
  },
]
`;

exports[`Language Tour — Polymorphism > let-polymorphism in blocks 1`] = `
[
  {
    "codegenJS": "function main() {
  const env_cls2 = {};
  const fnref_cls2 = closure_25;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  const innerID3 = closure_cls2;
  const v4 = "Num";
  const fnref5 = innerID3.__fn;
  const env6 = innerID3.__env;
  const v7 = fnref5(env6, v4);
  const v8 = 42;
  const fnref9 = v7.__fn;
  const env10 = v7.__env;
  const v11 = fnref9(env10, v8);
  const n12 = v11;
  const v13 = "String";
  const fnref14 = innerID3.__fn;
  const env15 = innerID3.__env;
  const v16 = fnref14(env15, v13);
  const v17 = "hi";
  const fnref18 = v16.__fn;
  const env19 = v16.__env;
  const v20 = fnref18(env19, v17);
  const s21 = v20;
  return n12;
}

function closure_26(env0, x1) {
  return x1;
}

function closure_25(env0, a1) {
  const env_cls2 = {};
  const fnref_cls2 = closure_26;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}
return main();
",
    "elaborated": "{
  let innerID
    : Π(a: Type) => (closure: Π(x: a) -> a -| Γ: a; innerID; letpoly)
    = λ(a: Type) => (λ(x: a) -> x : Π(x: a) -> a);
  let n : Num = innerID @Num 42;
  let s : String = innerID @String "hi";
  return n;
}",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"letpoly"}
[3] block
  :return -> [22]
  :stmt -> [4] {"index":0}
  :stmt -> [10] {"index":1}
  :stmt -> [16] {"index":2}
[4] stmt:let {"variable":"innerID"}
  :next -> [10]
  :value -> [5]
[5] lambda {"variable":"a","icit":"Implicit","level":2}
  :annotation -> [6]
  :body -> [7]
  :env -> [23]
[6] lit {"value":{"type":"Atom","value":"Type"}}
[7] lambda {"variable":"x","icit":"Explicit","level":3}
  :annotation -> [8]
  :body -> [9]
  :env -> [24]
[8] var:bound {"index":0}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [4] {"level":1}
  :scope -> [5] {"level":2}
[9] var:bound {"index":0}
  :refers_to -> [7]
  :scope -> [2] {"level":0}
  :scope -> [4] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [7] {"level":3}
[10] stmt:let {"variable":"n"}
  :next -> [16]
  :value -> [11]
[11] app {"icit":"Explicit"}
  :arg -> [15]
  :func -> [12]
[12] app {"icit":"Implicit"}
  :arg -> [14]
  :func -> [13]
[13] var:bound {"index":1}
  :refers_to -> [4]
  :scope -> [2] {"level":0}
  :scope -> [4] {"level":1}
  :scope -> [10] {"level":2}
[14] lit {"value":{"type":"Atom","value":"Num"}}
[15] lit {"value":{"type":"Num","value":42}}
[16] stmt:let {"variable":"s"}
  :value -> [17]
[17] app {"icit":"Explicit"}
  :arg -> [21]
  :func -> [18]
[18] app {"icit":"Implicit"}
  :arg -> [20]
  :func -> [19]
[19] var:bound {"index":2}
  :refers_to -> [4]
  :scope -> [2] {"level":0}
  :scope -> [4] {"level":1}
  :scope -> [10] {"level":2}
  :scope -> [16] {"level":3}
[20] lit {"value":{"type":"Atom","value":"String"}}
[21] lit {"value":{"type":"String","value":"hi"}}
[22] var:bound {"index":1}
  :refers_to -> [10]
  :scope -> [2] {"level":0}
  :scope -> [4] {"level":1}
  :scope -> [10] {"level":2}
  :scope -> [16] {"level":3}
[23] env
[24] env
[25] closure
  :body -> [5]
  :env -> [23]
[26] closure
  :body -> [7]
  :env -> [24]",
    "ivl": "(and
  (forall ((a Type)) (forall ((x Type)) (= x x)))
  (forall ((n Real)) (forall ((s String)) (= n n))))",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let env_cls2 = alloc {  }
      let fnref_cls2 = &closure_25
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      let innerID3 = closure_cls2
      let v4 = Num
      let fnref5 = read innerID3.__fn
      let env6 = read innerID3.__env
      let v7 = call *fnref5(env6, v4)
      let v8 = 42
      let fnref9 = read v7.__fn
      let env10 = read v7.__env
      let v11 = call *fnref9(env10, v8)
      let n12 = v11
      let v13 = String
      let fnref14 = read innerID3.__fn
      let env15 = read innerID3.__env
      let v16 = call *fnref14(env15, v13)
      let v17 = "hi"
      let fnref18 = read v16.__fn
      let env19 = read v16.__env
      let v20 = call *fnref18(env19, v17)
      let s21 = v20
      return n12
  fn closure_26(env0, x1) entry=entry
    entry:
      return x1
  fn closure_25(env0, a1) entry=entry
    entry:
      let env_cls2 = alloc {  }
      let fnref_cls2 = &closure_26
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2",
    "name": "letpoly",
    "normalized": "42",
    "solverTrace": "=== Formula ===
  (and
    (forall ((a Type)) (forall ((x Type)) (= x x)))
    (forall ((n Real)) (forall ((s String)) (= n n))))

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]

[quantifier] round 0: 0 lemmas
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[mbqi] round 0: 0 lemmas
  a=x -> residual
  x=x -> residual
  n=n -> residual
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1",
    "type": "Num",
    "validity": "valid",
  },
]
`;

exports[`Language Tour — Polymorphism > parametric polymorphism 1`] = `
[
  {
    "codegenJS": "function main() {
  const env_cls2 = {};
  const fnref_cls2 = closure_10;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}

function closure_11(env0, x1) {
  return x1;
}

function closure_10(env0, a1) {
  const env_cls2 = {};
  const fnref_cls2 = closure_11;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}
return main();
",
    "elaborated": "λ(a: Type) -> λ(x: a) -> x",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"id"}
[3] lambda {"variable":"a","icit":"Explicit","level":1}
  :annotation -> [4]
  :body -> [5]
  :env -> [8]
[4] lit {"value":{"type":"Atom","value":"Type"}}
[5] lambda {"variable":"x","icit":"Explicit","level":2}
  :annotation -> [6]
  :body -> [7]
  :env -> [9]
[6] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[7] var:bound {"index":0}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
[8] env
[9] env
[10] closure
  :body -> [3]
  :env -> [8]
[11] closure
  :body -> [5]
  :env -> [9]",
    "ivl": "(forall ((a Type)) (forall ((x Type)) (= x x)))",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let env_cls2 = alloc {  }
      let fnref_cls2 = &closure_10
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2
  fn closure_11(env0, x1) entry=entry
    entry:
      return x1
  fn closure_10(env0, a1) entry=entry
    entry:
      let env_cls2 = alloc {  }
      let fnref_cls2 = &closure_11
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2",
    "name": "id",
    "normalized": "λ(a: Type) -> (closure: λ(x: a) -> x -| Γ: a)",
    "solverTrace": "=== Formula ===
  (forall ((a Type)) (forall ((x Type)) (= x x)))

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]

[quantifier] round 0: 0 lemmas
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[mbqi] round 0: 0 lemmas
  a=x -> residual
  x=x -> residual
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1",
    "type": "Π(a: Type) -> Π(t1: a) -> a",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const env_cls2 = {};
  const fnref_cls2 = closure_16;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}

function closure_19(env0, y1) {
  const cap_0 = env0.v0;
  return cap_0;
}

function closure_18(env0, x1) {
  const cap_0 = env0.v0;
  const env_cls2 = {
    v0: x1
  };
  const fnref_cls2 = closure_19;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}

function closure_17(env0, b1) {
  const cap_0 = env0.v0;
  const env_cls2 = {
    v0: b1
  };
  const fnref_cls2 = closure_18;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}

function closure_16(env0, a1) {
  const env_cls2 = {
    v0: a1
  };
  const fnref_cls2 = closure_17;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}
return main();
",
    "elaborated": "λ(a: Type) -> λ(b: Type) -> λ(x: a) -> λ(y: b) -> x",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"const"}
[3] lambda {"variable":"a","icit":"Explicit","level":1}
  :annotation -> [4]
  :body -> [5]
  :env -> [12]
[4] lit {"value":{"type":"Atom","value":"Type"}}
[5] lambda {"variable":"b","icit":"Explicit","level":2}
  :annotation -> [6]
  :body -> [7]
  :env -> [13]
[6] lit {"value":{"type":"Atom","value":"Type"}}
[7] lambda {"variable":"x","icit":"Explicit","level":3}
  :annotation -> [8]
  :body -> [9]
  :env -> [14]
[8] var:bound {"index":1}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
[9] lambda {"variable":"y","icit":"Explicit","level":4}
  :annotation -> [10]
  :body -> [11]
  :env -> [15]
[10] var:bound {"index":1}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [7] {"level":3}
[11] var:bound {"index":1}
  :refers_to -> [7]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [7] {"level":3}
  :scope -> [9] {"level":4}
[12] env
[13] env
  :capture -> [3] {"index":0}
[14] env
  :capture -> [5] {"index":0}
[15] env
  :capture -> [7] {"index":0}
[16] closure
  :body -> [3]
  :env -> [12]
[17] closure
  :body -> [5]
  :env -> [13]
[18] closure
  :body -> [7]
  :env -> [14]
[19] closure
  :body -> [9]
  :env -> [15]",
    "ivl": "(forall ((a Type))
  (forall ((b Type)) (forall ((x Type)) (forall ((y Type)) (= x x)))))",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let env_cls2 = alloc {  }
      let fnref_cls2 = &closure_16
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2
  fn closure_19(env0, y1) entry=entry
    entry:
      let cap_0 = read env0.v0
      return cap_0
  fn closure_18(env0, x1) entry=entry
    entry:
      let cap_0 = read env0.v0
      let env_cls2 = alloc { v0: x1 }
      let fnref_cls2 = &closure_19
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2
  fn closure_17(env0, b1) entry=entry
    entry:
      let cap_0 = read env0.v0
      let env_cls2 = alloc { v0: b1 }
      let fnref_cls2 = &closure_18
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2
  fn closure_16(env0, a1) entry=entry
    entry:
      let env_cls2 = alloc { v0: a1 }
      let fnref_cls2 = &closure_17
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2",
    "name": "const",
    "normalized": "λ(a: Type) -> (closure: λ(b: Type) -> λ(x: a) -> λ(y: b) -> x -| Γ: a)",
    "solverTrace": "=== Formula ===
  (forall ((a Type))
    (forall ((b Type)) (forall ((x Type)) (forall ((y Type)) (= x x)))))

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]

[quantifier] round 0: 0 lemmas
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[mbqi] round 0: 0 lemmas
  a=x -> residual
  b=x -> residual
  x=x -> residual
  y=x -> residual
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1",
    "type": "Π(a: Type) -> Π(b: Type) -> Π(t2: a) -> Π(t3: b) -> a",
    "validity": "valid",
  },
]
`;

exports[`Language Tour — Polymorphism > unused binding does not over-generalize the block 1`] = `
[
  {
    "codegenJS": "function main() {
  const env_cls2 = {};
  const fnref_cls2 = closure_20;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  const proj3 = closure_cls2;
  const v4 = null;
  return v4;
}

function closure_22(env0, obj1) {
  const v0 = obj1.x;
  return v0;
}

function closure_21(env0, a1) {
  const env_cls2 = {};
  const fnref_cls2 = closure_22;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}

function closure_20(env0, r1) {
  const env_cls2 = {};
  const fnref_cls2 = closure_21;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}
return main();
",
    "elaborated": "{
  let proj
    : Π(r: Row) =>
      (closure: Π(a: Type) => Π(obj: Schema [ x: a | r ]) -> a -| Γ: r; proj)
    = λ(r: Row) =>
      λ(a: Type) =>
        (λ(obj: Schema [ x: a | r ]) -> (obj).x : Π(obj: Schema [ x: a | r ]) ->
          a);
  return unit;
}",
    "gram": "[1] root
  :entry -> [2]
[2] block
  :return -> [16]
  :stmt -> [3] {"index":0}
[3] stmt:let {"variable":"proj"}
  :value -> [4]
[4] lambda {"variable":"r","icit":"Implicit","level":1}
  :annotation -> [5]
  :body -> [6]
  :env -> [17]
[5] lit {"value":{"type":"Atom","value":"Row"}}
[6] lambda {"variable":"a","icit":"Implicit","level":2}
  :annotation -> [7]
  :body -> [8]
  :env -> [18]
[7] lit {"value":{"type":"Atom","value":"Type"}}
[8] lambda {"variable":"obj","icit":"Explicit","level":3}
  :annotation -> [9]
  :body -> [14]
  :env -> [19]
[9] app {"icit":"Explicit"}
  :arg -> [11]
  :func -> [10]
[10] lit {"value":{"type":"Atom","value":"Schema"}}
[11] row:ext {"label":"x"}
  :rest -> [13]
  :value -> [12]
[12] var:bound {"index":0}
  :refers_to -> [6]
  :scope -> [3] {"level":0}
  :scope -> [4] {"level":1}
  :scope -> [6] {"level":2}
[13] var:bound {"index":0}
  :refers_to -> [6]
  :scope -> [3] {"level":0}
  :scope -> [4] {"level":1}
  :scope -> [6] {"level":2}
[14] proj {"label":"x"}
  :target -> [15]
[15] var:bound {"index":0}
  :refers_to -> [8]
  :scope -> [3] {"level":0}
  :scope -> [4] {"level":1}
  :scope -> [6] {"level":2}
  :scope -> [8] {"level":3}
[16] lit {"value":{"type":"unit"}}
[17] env
[18] env
[19] env
[20] closure
  :body -> [4]
  :env -> [17]
[21] closure
  :body -> [6]
  :env -> [18]
[22] closure
  :body -> [8]
  :env -> [19]",
    "ivl": "(forall ((r Row)) (forall ((a Type)) (forall ((obj Schema)) (= obj obj))))",
    "kind": "expression",
    "mir": "module
  fn main entry=entry
    entry:
      let env_cls2 = alloc {  }
      let fnref_cls2 = &closure_20
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      let proj3 = closure_cls2
      let v4 = unit
      return v4
  fn closure_22(env0, obj1) entry=entry
    entry:
      let v0 = read obj1.x
      return v0
  fn closure_21(env0, a1) entry=entry
    entry:
      let env_cls2 = alloc {  }
      let fnref_cls2 = &closure_22
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2
  fn closure_20(env0, r1) entry=entry
    entry:
      let env_cls2 = alloc {  }
      let fnref_cls2 = &closure_21
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2",
    "name": "(expr)",
    "normalized": "unit",
    "solverTrace": "=== Formula ===
  (forall ((r Row)) (forall ((a Type)) (forall ((obj Schema)) (= obj obj))))

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]

[quantifier] round 0: 0 lemmas
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[mbqi] round 0: 0 lemmas
  obj=obj -> residual
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1",
    "type": "Unit",
    "validity": "valid",
  },
]
`;
